Alterado o background e inserção de logo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     <main>
+      <div id="pokedex-logo">
+        <img src="./src/imagens/Pokedex_Logo2.webp" alt="Pokémon Background">
+      </div>
       <div class="pokedex">
         <div class="cartoes-pokemon">
           <div class="cartao-pokemon aberto tipo-eletrico" id="cartao-pikachu">
